--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
 
-  <script type="module" src="/build/an-tags-input.esm.js"></script>
-  <script nomodule src="/build/an-tags-input.esm.js"></script>
+  <script type="module" src="/build/aln-tags-input.esm.js"></script>
+  <script nomodule src="/build/aln-tags-input.esm.js"></script>
 
 </head>
 <body>
