--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <title>Stencil Component Starter</title>
 
-  <script type="module" src="/build/aln-tags-input.esm.js"></script>
-  <script nomodule src="/build/aln-tags-input.esm.js"></script>
+  <script type="module" src="/build/aln-controls.esm.js"></script>
+  <script nomodule src="/build/aln-controls.esm.js"></script>
 
 </head>
 <body>
 
-  <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+  <aln-tags-input first="Stencil" last="'Don't call me a framework' JS"></aln-tags-input>
 
 </body>
 </html>
