--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <title>Stencil Component Starter</title>
+  <title>Aln tags input demo</title>
 
   <script type="module" src="/build/aln-controls.esm.js"></script>
   <script nomodule src="/build/aln-controls.esm.js"></script>
+  <style>
+    /* aln-tags-input {
+      --tag-input-width: calc(100% - 26px);;
+      --tag-input-display: block;
+    } */
+  </style>
 </head>
 <body>
 
-  <aln-tags-input first="Stencil" last="'Don't call me a framework' JS"></aln-tags-input>
+  <aln-tags-input tags-below="false"></aln-tags-input>
 
 </body>
 </html>
