--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,13 @@
   <title>Aln tags input demo</title>
 
   <script type="module" src="/build/aln-controls.esm.js"></script>
-  <script nomodule src="/build/aln-controls.esm.js"></script>
-  <style>
-    /* aln-tags-input {
+  <script nomodule src="/build/aln-controls.js"></script>
+  <!-- <style>
+    aln-tags-input {
       --tag-input-width: calc(100% - 26px);;
       --tag-input-display: block;
-    } */
-  </style>
+    }
+  </style> -->
 </head>
 <body>
 
