--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       --tag-border-radius: 5px;
       --tag-input-width: 100px;
       --tag-input-display: inline;
+      --tag-padding: 5px 8px;
       --tag-btn-icon-size: 16px;
       --tag-btn-icon-remove-color: white;
       --tag-btn-icon-add-color: black;
@@ -26,17 +27,20 @@
   </style>
 </head>
 <body>
-
-  <!-- <aln-tags-input tags-below="false"></aln-tags-input> -->
   <h4>default</h4>
   <aln-tags-input tags-below="false" class="default-style" ></aln-tags-input>
   <h4>readonly</h4>
-  <aln-tags-input tags-below="false" class="default-style" readonly="true"></aln-tags-input>
+  <aln-tags-input id="readonly" tags-below="false" class="default-style" readonly="true"></aln-tags-input>
   <h4>block input</h4>
   <aln-tags-input name="preset" tags-below="true" class="display-block" hide-input="false"></aln-tags-input>
   <h4>show tags only</h4>
   <aln-tags-input name="preset" tags-below="true" class="display-block" hide-input="true"></aln-tags-input>
+  <h4>show tags only + readonly</h4>
+  <aln-tags-input name="preset" tags-below="true" class="display-block" hide-input="true" readonly="true"></aln-tags-input>
   <script>
+    const tagReadonly = document.getElementById('readonly')
+    tagReadonly.tags = ['this', 'is', 'readonly']
+
     const tagsInputElems = document.getElementsByName('preset')
     tagsInputElems.forEach(e => {
       e.tags = ['this', 'is', 'a', 'test']
