--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <script type="module" src="/build/aln-controls.esm.js"></script>
   <script nomodule src="/build/aln-controls.js"></script>
+  <!-- <script src='https://unpkg.com/aln-tags-input@latest/dist/aln-controls.js'></script> -->
   <style>
     .default-style {
       --tag-bg: green;
